--- a/src/app/components/account-settings/profile/profile.component.css
+++ b/src/app/components/account-settings/profile/profile.component.css
@@ -310,15 +310,15 @@ button.btn.btn-link.ng-star-inserted {
 }
 
 .heading-step1.profile-section h4 {
-    color: black;
+    color: #000000bf;
 }
 
 .heading-step1.profile-section span {
-    color: black;
+    color: #000000bf;
 }
 
 .account-paged .heading-step1 h4 {
-    color: black;
+    color: #000000bf;
 }
 
 .account-paged form input {
